--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,41 @@
 .App {
   text-align: center;
-  background-image:url("https://images.wallpaperscraft.com/image/wall_brick_paint_texture_119441_1920x1080.jpg");
+
+}
+.tv-layer {
+  background-image: url("https://images.wallpaperscraft.com/image/wall_brick_paint_texture_119441_1920x1080.jpg");
+
+}
+.wall {
+  z-index: -5;
+  position:  relative;
+  width: 100%;
+  float:left;
 }
 
 .television-background {
-  z-index: -1;
+  margin-top: 20px;
   position:  absolute;
+
+  z-index: 1;
 }
-.youtube-video {
-  z-index:0;
+.youtube-video
+{
+  position: relative;
+  z-index: 2;
   margin-left: 7px;
-  margin-top: 6px;
+  margin-top: 26px;
 
 }
-.keys {
-  background-image:url("https://images.wallpaperscraft.com/image/wall_brick_paint_texture_119441_1920x1080.jpg");
+.next-button {
+  z-index: 10;
+}
+.back-button {
+  z-index: 10;
+}
+.desk-layer{
+  background-image: url("https://images.wallpaperscraft.com/image/wall_brick_paint_texture_119441_1920x1080.jpg");
+}
+.desk {
+  margin-bottom: 200px;
 }
